// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Footer with Edit Link 1`] = `
<div
  className="panel-footer"
>
  <div
    className="row"
  >
    <div
      className="col-lg-10 col-md-6 col-xs-8"
    >
      <div>
        Source
        :
        <a
          href="google.com"
        >
          
        </a>
      </div>
      <div>
        Created by
        : 
      </div>
      <div>
        Last Updated
        : 
        2017-01-01
      </div>
    </div>
    <div
      className="col-lg-2 col-md-6 col-xs-4 pull-right text-right"
    >
      <a
        href="/recipe/edit/1"
        onClick={[Function]}
      >
        <button
          className="btn btn-primary btn-sm"
        >
          Edit recipe
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`Test Footer without Edit Link 1`] = `
<div
  className="panel-footer"
>
  <div
    className="row"
  >
    <div
      className="col-lg-10 col-md-6 col-xs-8"
    >
      <div>
        Source
        :
        <a
          href="google.com"
        >
          
        </a>
      </div>
      <div>
        Created by
        : 
      </div>
      <div>
        Last Updated
        : 
        2017-01-01
      </div>
    </div>
    <div
      className="col-lg-2 col-md-6 col-xs-4 pull-right text-right"
    />
  </div>
</div>
`;
